--- a/Analisis.ipynb
+++ b/Analisis.ipynb
@@ -72,35 +72,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6e5c66a8-6943-4519-bbd8-5c6b5102ef07",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_usuario</th>\n",
+       "      <th>volveria</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>117</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>658</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>794</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>455</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>173</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_usuario  volveria\n",
+       "0         117         0\n",
+       "1         658         0\n",
+       "2         794         0\n",
+       "3         455         0\n",
+       "4         173         1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usuario_volveria_df = pd.read_csv(r'C:\\Users\\Enrique\\Desktop\\analisis\\Datasets\\tp-2020-2c-train-cols1.csv')\n",
+    "usuario_volveria_df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5fcbbb72-52ed-46e3-819c-19eb97863b1e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tipo_de_sala</th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>id_usuario</th>\n",
+       "      <th>genero</th>\n",
+       "      <th>edad</th>\n",
+       "      <th>amigos</th>\n",
+       "      <th>parientes</th>\n",
+       "      <th>id_ticket</th>\n",
+       "      <th>precio_ticket</th>\n",
+       "      <th>fila</th>\n",
+       "      <th>nombre_sede</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4d</td>\n",
+       "      <td>Señor Camilo Pedro</td>\n",
+       "      <td>117</td>\n",
+       "      <td>hombre</td>\n",
+       "      <td>73.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59258;</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fiumark_quilmes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4d</td>\n",
+       "      <td>Señora Raquel Angelica</td>\n",
+       "      <td>658</td>\n",
+       "      <td>mujer</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>586:6;</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fiumark_quilmes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>normal</td>\n",
+       "      <td>Señor Antonio Federico</td>\n",
+       "      <td>794</td>\n",
+       "      <td>hombre</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>RE\"39822</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fiumark_chacarita</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4d</td>\n",
+       "      <td>Señor Osvaldo Aureliano</td>\n",
+       "      <td>455</td>\n",
+       "      <td>hombre</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>C17\"4:39</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fiumark_palermo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4d</td>\n",
+       "      <td>Señorita Rita Eudosia</td>\n",
+       "      <td>173</td>\n",
+       "      <td>mujer</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>569964</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fiumark_palermo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  tipo_de_sala                   nombre  id_usuario  genero  edad  amigos  \\\n",
+       "0           4d       Señor Camilo Pedro         117  hombre  73.5       0   \n",
+       "1           4d   Señora Raquel Angelica         658   mujer  35.0       1   \n",
+       "2       normal   Señor Antonio Federico         794  hombre   NaN       0   \n",
+       "3           4d  Señor Osvaldo Aureliano         455  hombre   NaN       0   \n",
+       "4           4d    Señorita Rita Eudosia         173   mujer   4.0       1   \n",
+       "\n",
+       "   parientes id_ticket  precio_ticket fila        nombre_sede  \n",
+       "0          0    59258;              1  NaN    fiumark_quilmes  \n",
+       "1          1    586:6;              2  NaN    fiumark_quilmes  \n",
+       "2          0  RE\"39822              3  NaN  fiumark_chacarita  \n",
+       "3          0  C17\"4:39              1  NaN    fiumark_palermo  \n",
+       "4          1    569964              2  NaN    fiumark_palermo  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_fiumark_df = pd.read_csv(r'C:\\Users\\Enrique\\Desktop\\analisis\\Datasets\\tp-2020-2c-train-cols2.csv')\n",
+    "info_fiumark_df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "556c10a8-3a71-49c5-9d50-2280eeac1515",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 801 entries, 0 to 800\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column      Non-Null Count  Dtype\n",
+      "---  ------      --------------  -----\n",
+      " 0   id_usuario  801 non-null    int64\n",
+      " 1   volveria    801 non-null    int64\n",
+      "dtypes: int64(2)\n",
+      "memory usage: 12.6 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "usuario_volveria_df.info()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff254ed4-e25a-41a5-9a45-4449bfc24e50",
+   "cell_type": "markdown",
+   "id": "e404a07b-ad9a-48c1-b344-a553408609f4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Notamos que la columna de 'volveria' es de tipo int64, cuando solamente tiene valores que pueden ser 0 o 1. Un mejor tipo de dato para este caso puede ser un int8. Esto permitiría ahorrar memoria. (Aunque en este caso no sean muchos datos)"
+   ]
   },
   {
    "cell_type": "code",
@@ -108,7 +331,9 @@
    "id": "8a3e28de-14a1-47fa-9748-c630f1ad824b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "usuario_volveria_df['volveria'] = usuario_volveria_df['volveria'].astype(np.int8)"
+   ]
   },
   {
    "cell_type": "code",
