se buscan valores null

--- a/Analisis.ipynb
+++ b/Analisis.ipynb
@@ -292,6 +292,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2441d47e-1c63-4992-9963-a7a8cb191bbe",
+   "metadata": {},
+   "source": [
+    "### df volveria"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "556c10a8-3a71-49c5-9d50-2280eeac1515",
@@ -327,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8a3e28de-14a1-47fa-9748-c630f1ad824b",
    "metadata": {},
    "outputs": [],
@@ -338,58 +346,93 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7d24b09-d2ec-42c4-91cc-dae99d07c985",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e4b413ad-67cf-48c7-b50c-ce80f9d0a5f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Observamos que no tenemos valores nulos"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "20eb9b6d-5376-4fd8-84f5-942b5c79c7d9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id_usuario    0\n",
+       "volveria      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usuario_volveria_df.isnull().sum()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2c40af7-a0ce-4a4b-990c-d8f4eae5311b",
+   "cell_type": "markdown",
+   "id": "6652f466-2967-49f4-89bc-d5657cb2b56d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### info_fiumark_df"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1b4c274-ea2a-43f7-b4c8-48bf8893cd7c",
+   "cell_type": "markdown",
+   "id": "e0ac86fb-3f3c-42b5-9f7d-677189d0a26f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Notamos una gran cantidad de valores nulos en la columna \"fila\" y algunos en \"edad\" y \"nombre_sede\". Como las columnas que tienen los valores nulos pueden llegar a ser relevantes para el análisis, siendo este el caso de las columnas \"fila\" y \"edad\" decidimos crear la categoría \"No responde\" para el caso de \"fila\"."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "997d0eca-498a-46da-9209-b3d939aec3ff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tipo_de_sala       0\n",
+       "nombre             0\n",
+       "id_usuario         0\n",
+       "genero             0\n",
+       "edad             160\n",
+       "amigos             0\n",
+       "parientes          0\n",
+       "id_ticket          0\n",
+       "precio_ticket      0\n",
+       "fila             624\n",
+       "nombre_sede        2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_fiumark_df.isnull().sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "3676a672-167d-40ab-ae8e-1f5379bb6056",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "info_fiumark_df['fila'].fillna(\"No responde\",inplace=True)"
+   ]
   },
   {
    "cell_type": "code",
