se crea categoria "no responde" para el caso de valores nulos de fila

--- a/Analisis.ipynb
+++ b/Analisis.ipynb
@@ -435,12 +435,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7351bee-d0a6-44b6-a587-23653f96f09b",
+   "cell_type": "markdown",
+   "id": "20a15588-6038-4b97-87e7-7b999c6a1a74",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Ahora vemos la cantidad de valores únicos para las columnas de tipo objeto, para poder determinar a cuales les correspondería tener un tipo categórico."
+   ]
   },
   {
    "cell_type": "code",
